Updated test cases and added xerces lib files for VC10.
git-svn-id: file:///dev/shm/opensim/Branches/OpenSim23_1@6388 fc29be9c-2cb0-420d-b520-73dbd18add6e

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,9 @@ IF(WIN32)
 	IF(CMAKE_GENERATOR MATCHES  "Visual Studio 9")
 		SET(VCVERSION VC9)
 	ENDIF(CMAKE_GENERATOR MATCHES  "Visual Studio 9")
+	IF(CMAKE_GENERATOR MATCHES  "Visual Studio 10")
+		SET(VCVERSION VC10)
+	ENDIF(CMAKE_GENERATOR MATCHES  "Visual Studio 10")
 	SET(Platform "Windows")
     SET(NATIVE_COPY_CMD copy)
 ELSEIF(APPLE)
