Patches to CMakeLists.txt from Daniele Giunchi to support building on PLX 64 bit
git-svn-id: file:///dev/shm/opensim/Branches/OpenSim23_1@6451 fc29be9c-2cb0-420d-b520-73dbd18add6e

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -240,6 +240,7 @@ ELSE(WIN32)
 	   ENDIF (ARCH64)
 	ELSE (APPLE)
 	   IF(ARCH64) 
+		  SET( CMAKE_CXX_FLAGS "-m64" )
 	   ELSE (ARCH64)
 		  # I don't believe setting the CXX flags is working in cmake.
 		  SET( CMAKE_CXX_FLAGS "-m32" )
@@ -275,17 +276,17 @@ IF(BUILD_USING_OTHER_LAPACK)
 "Basename of the actual Lapack library we're depending on; can't change here; see variable BUILD_USING_OTHER_LAPACK." FORCE)
 ENDIF(BUILD_USING_OTHER_LAPACK)
 
-IF(${CMAKE_C_COMPILER} MATCHES "gcc")
+IF(${CMAKE_C_COMPILER} MATCHES "cl")
+    ## Assume Microsoft Visual Studio
+    SET(MATH_LIBS_TO_USE    ${LAPACK_BEING_USED} pthreadVC2)
+ELSE(${CMAKE_C_COMPILER} MATCHES "cl")
     IF(APPLE)
 	    SET(REALTIME_LIB)
     ELSE()
 	    SET(REALTIME_LIB rt)
     ENDIF()
     SET(MATH_LIBS_TO_USE    ${LAPACK_BEING_USED} pthread ${REALTIME_LIB} dl)
-ELSE(${CMAKE_C_COMPILER} MATCHES "gcc")
-    ## Assume Microsoft Visual Studio
-    SET(MATH_LIBS_TO_USE    ${LAPACK_BEING_USED} pthreadVC2)
-ENDIF(${CMAKE_C_COMPILER} MATCHES "gcc")
+ENDIF(${CMAKE_C_COMPILER} MATCHES "cl")
 
 # If using prebuilt libraries reset SIMTK_DIR to relative path in source tree
 IF(USE_LIBRARIES_FROM_REPOSITORY)
