Merge: Merge 3.0 branch with several revisions committed in trunk.
git-svn-id: file:///dev/shm/opensim/Branches/OpenSim30@7515 fc29be9c-2cb0-420d-b520-73dbd18add6e

--- a/Gui/opensim/nbproject/private/platform-private.properties
+++ b/Gui/opensim/nbproject/private/platform-private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Documents and Settings\\Ayman\\.netbeans\\7.0\\build.properties
+user.properties.file=C:\\Users\\NMBL\\.netbeans\\7.1.2\\build.properties
