--- a/Gui/opensim/branding/modules/org-netbeans-core.jar/org/netbeans/core/ui/Bundle.properties
+++ b/Gui/opensim/branding/modules/org-netbeans-core.jar/org/netbeans/core/ui/Bundle.properties
@@ -1,4 +1,4 @@
-LBL_ProductInformation=OpenSim 3.0.beta7
-currentVersion=OpenSim 3.0.beta7
+LBL_ProductInformation=OpenSim 3.0
+currentVersion=OpenSim 3.0
 
 
