--- a/Gui/opensim/branding/modules/org-netbeans-core-windows.jar/org/netbeans/core/windows/view/ui/Bundle.properties
+++ b/Gui/opensim/branding/modules/org-netbeans-core-windows.jar/org/netbeans/core/windows/view/ui/Bundle.properties
@@ -1,3 +1,3 @@
-CTL_MainWindow_Title=OpenSim 3.1 WW
-CTL_MainWindow_Title_No_Project=OpenSim 3.1 WW
+CTL_MainWindow_Title=OpenSim 3.1
+CTL_MainWindow_Title_No_Project=OpenSim 3.1
 
