--- a/Gui/opensim/branding/modules/org-netbeans-core.jar/org/netbeans/core/ui/Bundle.properties
+++ b/Gui/opensim/branding/modules/org-netbeans-core.jar/org/netbeans/core/ui/Bundle.properties
@@ -1,4 +1,4 @@
-LBL_ProductInformation=OpenSim 3.1 WW
-currentVersion=OpenSim 3.1 WW
+LBL_ProductInformation=OpenSim 3.1
+currentVersion=OpenSim 3.1
 
 
