--- a/Gui/opensim/scriptingShell/src/org/opensim/console/Bundle.properties
+++ b/Gui/opensim/scriptingShell/src/org/opensim/console/Bundle.properties
@@ -5,3 +5,4 @@ HINT_ScriptingShellTopComponent=This is a ScriptingShell window
 OpenIDE-Module-Name=scriptingShell
 ScriptingShellTopComponent.toolTipText=Name of py file
 CTL_ScriptsPath=Scripts
+CTL_MRUScriptsAction=Open Recent
