GUI: implement Run Recent for Scripts
git-svn-id: file:///dev/shm/opensim/Branches/OpenSim31@8251 fc29be9c-2cb0-420d-b520-73dbd18add6e

--- a/Gui/opensim/scriptingShell/src/org/opensim/console/Bundle.properties
+++ b/Gui/opensim/scriptingShell/src/org/opensim/console/Bundle.properties
@@ -6,3 +6,4 @@ OpenIDE-Module-Name=scriptingShell
 ScriptingShellTopComponent.toolTipText=Name of py file
 CTL_ScriptsPath=Scripts
 CTL_MRUScriptsAction=Open Recent
+CTL_RunMRUScriptsAction=Run Recent
