GUI: Toolbar start/stop functional with save-partial-results
git-svn-id: file:///dev/shm/opensim/Branches/OpenSim31@8291 fc29be9c-2cb0-420d-b520-73dbd18add6e

--- a/Gui/opensim/tracking/src/org/opensim/tracking/tools/Bundle.properties
+++ b/Gui/opensim/tracking/src/org/opensim/tracking/tools/Bundle.properties
@@ -7,3 +7,5 @@ CTL_ScaleAction=OLD Scale...
 CTL_ScaleToolAction=Scale Model...
 CTL_IKToolAction=Inverse Kinematics...
 CTL_StaticOptimizationAction=Static Optimization...
+CTL_ToolbarRunAction=Run Forward Simulation
+CTL_ToolbarStopAction=Stop
