GUI: Separate Toolbar for Simulation actions Run/Stop
git-svn-id: file:///dev/shm/opensim/Branches/OpenSim31@8314 fc29be9c-2cb0-420d-b520-73dbd18add6e

--- a/Gui/opensim/tracking/src/org/opensim/tracking/tools/Bundle.properties
+++ b/Gui/opensim/tracking/src/org/opensim/tracking/tools/Bundle.properties
@@ -9,3 +9,6 @@ CTL_IKToolAction=Inverse Kinematics...
 CTL_StaticOptimizationAction=Static Optimization...
 CTL_ToolbarRunAction=Run Forward Simulation
 CTL_ToolbarStopAction=Stop
+SimulationJPanel.jPanel1.border.title=Simulation
+SimulationJPanel.jRunButton.text=Run
+SimulationJPanel.jStopButton.text=Stop
