GUI: Dropdown button to set final time of forward tool quick run
git-svn-id: file:///dev/shm/opensim/Branches/OpenSim31@8317 fc29be9c-2cb0-420d-b520-73dbd18add6e

--- a/Gui/opensim/tracking/src/org/opensim/tracking/tools/Bundle.properties
+++ b/Gui/opensim/tracking/src/org/opensim/tracking/tools/Bundle.properties
@@ -7,7 +7,7 @@ CTL_ScaleAction=OLD Scale...
 CTL_ScaleToolAction=Scale Model...
 CTL_IKToolAction=Inverse Kinematics...
 CTL_StaticOptimizationAction=Static Optimization...
-CTL_ToolbarRunAction=Run Forward Simulation
+CTL_ToolbarRunAction=Run
 CTL_ToolbarStopAction=Stop
 SimulationJPanel.jPanel1.border.title=Simulation
 SimulationJPanel.jRunButton.text=Run
